Correct one formatting error in perldelta.pod.
This was causing a failure in t/porting/podcheck.t.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -147,7 +147,7 @@ L<XSLoader> has been upgraded from version 0.22 to 0.24.
 
 =item *
 
-L<Locale-Codes> has been upgraded from 3.39 to 3.40.
+L<Locale::Codes> has been upgraded from 3.39 to 3.40.
 
 =item *
 
