Fix typo in perlrun.pod
s/and/any/
perl -c documentation has a typo when talking about BEGIN blocks.

Steven Humphrey is now a Perl author.

For: RT #129313

--- a/AUTHORS
+++ b/AUTHORS
@@ -1154,6 +1154,7 @@ Steve Purkis			<Steve.Purkis@multimap.com>
 Steve Vinoski
 Stevan Little			<stevan@cpan.org>
 Steven Hirsch			<hirschs@btv.ibm.com>
+Steven Humphrey			<catchperl@33k.co.uk>
 Steven Knight			<knight@theopera.baldmt.citilink.com>
 Steven Morlock			<newspost@morlock.net>
 Steven N. Hirsch		<hirschs@stargate.btv.ibm.com>
