--- a/AUTHORS
+++ b/AUTHORS
@@ -1148,6 +1148,7 @@ Steve Purkis			<Steve.Purkis@multimap.com>
 Steve Vinoski
 Stevan Little			<stevan@cpan.org>
 Steven Hirsch			<hirschs@btv.ibm.com>
+Steven Humphrey			<catchperl@33k.co.uk>
 Steven Knight			<knight@theopera.baldmt.citilink.com>
 Steven Morlock			<newspost@morlock.net>
 Steven N. Hirsch		<hirschs@stargate.btv.ibm.com>
