--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -597,6 +597,7 @@ the strings?).
  Matthew   5.25.2       2016-Jun-20
  Steve     5.25.3       2016-Jul-20
  BinGOs    5.25.4       2016-Aug-20
+ Stevan    5.25.5       2016-Sep-20
 
 =head2 SELECTED RELEASE SIZES
 
