--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -53,7 +53,7 @@ you should reset the version numbers to the next blead series.
   2016-06-20  5.25.2 ✓        Matthew Horsfall
   2016-07-20  5.25.3 ✓        Steve Hay
   2016-08-20  5.25.4 ✓        BinGOs
-  2016-09-20  5.25.5          Stevan Little
+  2016-09-20  5.25.5 ✓        Stevan Little
   2016-10-20  5.25.6          Aaron Crane
   2016-11-20  5.25.7          Chad Granum
   2016-12-20  5.25.8          Sawyer X
