--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -178,7 +178,7 @@ such circumstances.  [perl #47047]
 
 =item *
 
-A sub containing with a "forward" declaration with the same name (e.g.,
+A sub containing a "forward" declaration with the same name (e.g.,
 C<sub c { sub c; }>) could sometimes crash or loop infinitely.  [perl
 #129090]
 
