--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -284,20 +284,21 @@ cases such as C<#!/opt/perl64/bin/perl>.
 
 =head1 Acknowledgements
 
-Perl 5.24.1 represents approximately 3 months of development since Perl 5.24.0
-and contains approximately 7,100 lines of changes across 240 files from 13
+Perl 5.24.1 represents approximately 5 months of development since Perl 5.24.0
+and contains approximately 7,600 lines of changes across 240 files from 16
 authors.
 
 Excluding auto-generated files, documentation and release tools, there were
-approximately 1,500 lines of changes to 170 .pm, .t, .c and .h files.
+approximately 1,900 lines of changes to 180 .pm, .t, .c and .h files.
 
 Perl continues to flourish into its third decade thanks to a vibrant community
 of users and developers.  The following people are known to have contributed
 the improvements that became Perl 5.24.1:
 
-Alex Vandiver, Craig A. Berry, Father Chrysostomos, James E Keenan, Jarkko
-Hietaniemi, Karen Etheridge, Leon Timmermans, Matthew Horsfall, Ricardo Signes,
-Sawyer X, Sébastien Aperghis-Tramoni, Steve Hay, Tony Cook.
+Alex Vandiver, Aristotle Pagaltzis, Chris 'BinGOs' Williams, Craig A. Berry,
+Father Chrysostomos, James E Keenan, Jarkko Hietaniemi, Karen Etheridge, Leon
+Timmermans, Matthew Horsfall, Ricardo Signes, Sawyer X, Sébastien
+Aperghis-Tramoni, Stevan Little, Steve Hay, Tony Cook.
 
 The list above is almost certainly incomplete as it is automatically generated
 from version control history.  In particular, it does not include the names of
