--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -570,6 +570,7 @@ the strings?).
  Steve     5.22.3-RC1   2016-Jul-17
  Steve     5.22.3-RC2   2016-Jul-25
  Steve     5.22.3-RC3   2016-Aug-11
+ Steve     5.22.3-RC4   2016-Oct-12
 
  Ricardo   5.23.0       2015-Jun-20     The 5.23 development track
  Matthew   5.23.1       2015-Jul-20
@@ -591,6 +592,7 @@ the strings?).
  Steve     5.24.1-RC1   2016-Jul-17
  Steve     5.24.1-RC2   2016-Jul-25
  Steve     5.24.1-RC3   2016-Aug-11
+ Steve     5.24.1-RC4   2016-Oct-12
 
  Ricardo   5.25.0       2016-May-09     The 5.25 development track
  Sawyer X  5.25.1       2016-May-20
